tests/errors/preprocessor/test.c
#eval (1ea)

void main()
{ 

}
